feat(profile): Allow resetting password

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="booking-container">
-    <h1>Role Booking</h1>
+    <h1>Booking Assistant</h1>
 
     <div class="booking-header">
         <div class="my-bookings-container">
@@ -103,6 +103,10 @@
             {% endfor %}
         </tbody>
     </table>
+    <p style="font-size:0.7em;">
+        <br/>- The Prepared Speaker role can be booked once every three weeks.
+        <br/>- Guest roles like ah-counter, gramarian etc. are unavailable here.
+    </p>
 </div>
 
 <script>
