--- a/templates/settings.html
+++ b/templates/settings.html
@@ -33,6 +33,7 @@
                         <th>Title</th>
                         <th>Default Owner</th>
                         <th>Role</th>
+                        <th>Role Group</th>
                         <th>Min (mins)</th>
                         <th>Max (mins)</th>
                         <th>Section</th>
@@ -47,6 +48,7 @@
                         <td data-field="Title">{{ st.Title }}</td>
                         <td data-field="Default_Owner">{{ st.Default_Owner if st.Default_Owner is not none else '' }}</td>
                         <td data-field="Role">{{ st.Role if st.Role is not none else '' }}</td>
+                        <td data-field="Role_Group">{{ st.Role_Group if st.Role_Group is not none else '' }}</td>
                         <td data-field="Duration_Min">{{ st.Duration_Min if st.Duration_Min is not none else '' }}</td>
                         <td data-field="Duration_Max">{{ st.Duration_Max if st.Duration_Max is not none else '' }}</td>
                         <td data-field="Is_Section">
@@ -68,7 +70,6 @@
             <h2>Agenda Settings</h2>
             <p>Settings related to the meeting agenda, templates, and session types will be configured here.</p>
         </div>
-
 
         <div id="user-settings" class="tab-content">
             <h2>User Management</h2>
